syntax = "proto3";

package wishing;

service WishingService {
  rpc CreateWish (CreateWishRequest) returns (WishResponse);
  rpc FindWishById (FindWishByIdRequest) returns (WishResponse);
  rpc FindAllWishes (FindAllWishesRequest) returns (WishesResponse);
  rpc UpdateWishById (UpdateWishByIdRequest) returns (WishResponse);
  rpc DeleteWishById (FindWishByIdRequest) returns (WishResponse);
  rpc GetShrineWishCount (GetShrineWishCountRequest) returns (ShrineWishCountResponse);
}

message CreateWishRequest {
  string wisher_id = 1;
  string shrine_id = 2;
  optional string wisher_name = 3;
  string description = 4;
  optional bool public = 5;
}

message FindWishByIdRequest {
  string id = 1;
}

message FindAllWishesRequest {
  optional string shrine_id = 1;
  optional string wisher_id = 2;
}

message UpdateWishByIdRequest {
  string id = 1;
  optional string wisher_id = 2;
  optional string shrine_id = 3;
  optional string wisher_name = 4;
  optional string description = 5;
  optional bool public = 6;
}

message WishResponse {
  string id = 1;
  string wisher_id = 2;
  string shrine_id = 3;
  string wisher_name = 4;
  string description = 5;
  bool public = 6;
  string createdAt = 7;
  string updatedAt = 8;
}

message WishesResponse {
  repeated WishResponse wishes = 1;
}

message GetShrineWishCountRequest {
  string shrineId = 1;
}

message CategoryCount {
  string category = 1;
  int32 count = 2;
}

message ShrineWishCountResponse {
  string shrineId = 1;
  int32 totalWishes = 2;
  int32 recentWishesCount = 3;
  repeated CategoryCount popularCategories = 4;
}
